// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`baseFunctionality basic insert all new events 1`] = `
[
  [
    "1/1 | inserting chunk of changed or new periodic events",
    {
      "events": [
        {
          "interval": 30,
          "subType": "DB",
          "type": "HealthCheck_PERIODIC",
        },
        {
          "interval": 30,
          "subType": "AppA",
          "type": "AppSpecific_PERIODIC",
        },
        {
          "interval": 86400,
          "subType": "DELETE_EVENTS",
          "type": "EVENT_QUEUE_BASE_PERIODIC",
        },
      ],
    },
  ],
]
`;

exports[`baseFunctionality basic insert all new events 2`] = `
[
  {
    "attempts": 0,
    "startAfter": "2023-11-13T11:00:00.000Z",
    "status": 0,
  },
  {
    "attempts": 0,
    "startAfter": "2023-11-13T11:00:00.000Z",
    "status": 0,
  },
  {
    "attempts": 0,
    "startAfter": "2023-11-13T11:00:00.000Z",
    "status": 0,
  },
]
`;

exports[`baseFunctionality delta insert 1`] = `
[
  [
    "1/1 | inserting chunk of changed or new periodic events",
    {
      "events": [
        {
          "interval": 30,
          "subType": "DB",
          "type": "HealthCheck_PERIODIC",
        },
        {
          "interval": 30,
          "subType": "AppA",
          "type": "AppSpecific_PERIODIC",
        },
        {
          "interval": 86400,
          "subType": "DELETE_EVENTS",
          "type": "EVENT_QUEUE_BASE_PERIODIC",
        },
      ],
    },
  ],
  [
    "1/1 | inserting chunk of changed or new periodic events",
    {
      "events": [
        {
          "interval": 30,
          "subType": "DB2",
          "type": "HealthCheck_PERIODIC",
        },
      ],
    },
  ],
]
`;

exports[`baseFunctionality delta insert 2`] = `
[
  {
    "attempts": 0,
    "startAfter": "2023-11-13T11:00:00.000Z",
    "status": 0,
  },
  {
    "attempts": 0,
    "startAfter": "2023-11-13T11:00:00.000Z",
    "status": 0,
  },
  {
    "attempts": 0,
    "startAfter": "2023-11-13T11:00:00.000Z",
    "status": 0,
  },
  {
    "attempts": 0,
    "startAfter": "2023-11-13T11:00:00.000Z",
    "status": 0,
  },
]
`;

exports[`baseFunctionality if periodic event is in progress - no insert should happen 1`] = `
[
  [
    "1/1 | inserting chunk of changed or new periodic events",
    {
      "events": [
        {
          "interval": 10,
          "subType": "DB",
          "type": "HealthCheck_PERIODIC",
        },
        {
          "interval": 86400,
          "subType": "DELETE_EVENTS",
          "type": "EVENT_QUEUE_BASE_PERIODIC",
        },
      ],
    },
  ],
]
`;

exports[`baseFunctionality if periodic event is in progress - no insert should happen 2`] = `
[
  {
    "attempts": 0,
    "startAfter": "2023-11-13T11:00:00.000Z",
    "status": 1,
  },
  {
    "attempts": 0,
    "startAfter": "2023-11-13T11:00:00.000Z",
    "status": 1,
  },
]
`;

exports[`baseFunctionality interval changed 1`] = `
[
  [
    "1/1 | inserting chunk of changed or new periodic events",
    {
      "events": [
        {
          "interval": 30,
          "subType": "DB",
          "type": "HealthCheck_PERIODIC",
        },
        {
          "interval": 86400,
          "subType": "DELETE_EVENTS",
          "type": "EVENT_QUEUE_BASE_PERIODIC",
        },
      ],
    },
  ],
  [
    "deleting periodic events because they have changed",
    {
      "changedEvents": [
        {
          "subType": "DB",
          "type": "HealthCheck_PERIODIC",
        },
      ],
    },
  ],
  [
    "1/1 | inserting chunk of changed or new periodic events",
    {
      "events": [
        {
          "interval": 10,
          "subType": "DB",
          "type": "HealthCheck_PERIODIC",
        },
      ],
    },
  ],
]
`;

exports[`baseFunctionality interval changed 2`] = `
[
  {
    "attempts": 0,
    "startAfter": "2023-11-13T11:00:30.000Z",
    "status": 0,
  },
  {
    "attempts": 0,
    "startAfter": "2023-11-13T11:00:00.000Z",
    "status": 0,
  },
]
`;
